Finished the content (Need to do Illustrations)

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: The Universal Dev
+title: "The Universal Dev"
+description: "The Universal Dev - Teaching the world code and design through blog posts, and easy-to-follow tutorial videos on YouTube."
 author: The Universal Dev
-github: https://www.github.com/theuniversaldev
+baseurl: ""
